@@ -41,6 +41,8 @@
 ./lib/datasources/WeatherMapDataSource_static.php
 ./lib/datasources/WeatherMapDataSource_tabfile.php
 ./lib/datasources/WeatherMapDataSource_snmp.php
+./lib/datasources/WeatherMapDataSource_fping.php
+./lib/datasources/WeatherMapDataSource_skeleton.php.txt
 ./lib/javascript/jquery-latest.pack.js
 ./lib/poller-common.php
 ./lib/post/WeatherMapPostProcessorTest.php
